# smasher

./: .gitignore  Makefile  Procfile  README.md  app.py  body.css  car.py  err.txt  index.py  now.json  pyproject.toml  requirements.txt  server.py  t.py  tempCodeRunnerFile.py  tests.py
.well-known/pki-validation/: 6F118A53C4E0BA7B977469268C1D86C9.txt  C6D4CD904C6D1CDC5F56E74847BA8121.txt
app/: app.py  car.py  game_loop.py  geometry.py
app/car/: __init__.py  base.py  bot.py  constants.py  player.py  simple_bot.py  utils.py
static/.well-known/pki-validation/: 4E97029489E808EA179E63B76AD16B89.txt
static/css/: main.css
static/js/: car.js  food.js  scoreboard.js  script.js
static/js/libraries/: pixi.js
templates/: base.html  index.html
videos/smasher no context/: 2021-04-20 14-05-18.mkv
